@@ -23,7 +23,7 @@
     <parent>
         <artifactId>camel-ai-parent</artifactId>
         <groupId>org.apache.camel</groupId>
-        <version>4.15.0-SNAPSHOT</version>
+        <version>4.16.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-tensorflow-serving</artifactId>
@@ -36,6 +36,8 @@
     <properties>
         <!-- TensorFlow Serving container is not available on these platforms -->
         <skipITs.s390x>true</skipITs.s390x>
+        <!-- Make use of native access during IT test execution only -->
+        <camel.failsafe.fork.additional-vmargs>--enable-native-access=ALL-UNNAMED</camel.failsafe.fork.additional-vmargs>
     </properties>
 
     <dependencies>
