@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.camel</groupId>
         <artifactId>components</artifactId>
-        <version>4.15.0-SNAPSHOT</version>
+        <version>4.16.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-leveldb</artifactId>
@@ -36,6 +36,8 @@
         <label>database</label>
         <title>LevelDB</title>
 
+        <!-- Make use of native access during IT test execution only -->
+        <camel.failsafe.fork.additional-vmargs>--enable-native-access=ALL-UNNAMED</camel.failsafe.fork.additional-vmargs>
     </properties>
 
     <dependencies>
