@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.camel</groupId>
         <artifactId>components</artifactId>
-        <version>4.15.0-SNAPSHOT</version>
+        <version>4.16.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-parquet-avro</artifactId>
@@ -33,6 +33,8 @@
 
     <properties>
         <enforcer.phase>none</enforcer.phase><!-- hadoop-common seems to require com.sun.xml.bind:jaxb-impl via com.github.pjfanning:jersey-json -->
+        <!-- Make use of native access during IT test execution only -->
+        <camel.failsafe.fork.additional-vmargs>--enable-native-access=ALL-UNNAMED</camel.failsafe.fork.additional-vmargs>
     </properties>
 
     <dependencies>
